Fixed firefox overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -199,6 +199,7 @@
     position: relative;
     display: flex;
     align-items: center;
+    width: 98%
 }
 
 .sec3 pre {
@@ -208,7 +209,8 @@
     height: 86%;
     width: 100%;
     font-size: 16px;
-    color: white;
+    /* color: var(--text3); */
+    color: #8effed;
     margin: 10px;
 }
 
